[package]
name = "midi_synth"
version = "0.1.0"
authors = ["Ryan McCampbell <rmccampbell7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.2.17", features = ["derive"] }
cpal = "0.13.4"
ctrlc = "3.2.1"
midir = "0.8.0"
thiserror = "1.0.30"
wmidi = "4.0.6"
