[package]
name = "midi_synth"
version = "0.1.0"
authors = ["Ryan McCampbell <rmccampbell7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
cpal = "0.15.3"
ctrlc = "3.4.5"
midir = "0.10.0"
wmidi = "4.0.10"
